--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".activity.SignupActivity"></activity>
+        <activity android:name=".activity.UserProfileActivity"></activity>
+        <activity android:name=".activity.SignupActivity" />
         <activity android:name=".activity.PostDetailsActivity" />
 
         <provider
